[package]
name = "no_inflate"
version = "0.1.0"
edition = "2021"
description = "A minimal no_std Rust library implementing zlib inflate (DEFLATE) algorithm in pure Rust using alloc for dynamic output buffer."
readme = "README.md"
homepage = "https://github.com/kpishere/no_inflate"
repository = "https://github.com/kpishere/no_inflate"
license = "GPL-2.0"
keywords = ["zlib", "inflate","decompress","embedded"]
categories = ["compression", "no-std"]
exclude = ["target", ".git", "Cargo.lock"]

[lib]
name = "no_inflate"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]

[features]
default = []
alloc = []

[dev-dependencies]
flate2 = { version = "1.0", features = ["zlib"] }
wee_alloc = "0.4"
base64 = "0.13"
